<resources>
    <string name="app_name">FindUrPanditji</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_send">Send</string>
    <string name="menu_pandits">Pandits</string>
    <string name="menu_pujas">Pujas</string>
    <string name="menu_gods">Gods</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_bookings">Bookings</string>
    <string name="nav_header_login">Login</string>
    <string name="home_text1"> findurpanditji.com serve you for your exact and customized religious need with our well
        experienced panditji and samagri at reasonable prices and hassle free service. Its a easy way to find and book
        pandit online.We provide you pandit for puja at very reasional dakshina. Just contact us on our Mobile numbers
        ,E-mail address for your queries and we will guide you about the exact nature of services available with us.
        We specialize in conducting religious puja at your place of convenience. findurpanditji.com provides you to
        book pandit online. We specialize in conducting religious pujas - Namakaran puja, Mundan puja, Birthday puja,
        Janeu(Sacred Thread) puja, SatyaNarayan Puja, Griha Pravesh, Bhoomi Puja, Navagraha Shanti Puja, Vastu Shanti
        Pooja, Rudra Abhishek, New Business, vivah puja, Narayan Nagbali Puja, Engagement puja, Laxmi Puja, Ganesha
        puja and Durga Puja, Mata ki Chouki and Jaagran, Maha Mritunjya Jaap Puja, Yagna Havans, Kalsarpa Puja, Shradh Puja,
        Last Right Rituals. Allpanditji provides you best online pandit booking services for puja. We provide pandit
        for puja in Mumbai, Navi Mumbai, Delhi, Hyderabad, Bangalore, kolkata and all major cities of India. We provide
        top pandit for puja. Book pandit for puja online now.
        </string>
    <string name="home_text2">We perform all kind of following pujas like Namakaran puja, Mundan puja, Birthday puja,
        Janeu(Sacred Thread) puja, SatyaNarayan Puja, Griha Pravesh, Bhoomi Puja, Navagraha Shanti Puja, Vastu Shanti
        Puja, Rudra Abhishek, New Business, vivah puja, Narayan Nagbali Puja, Engagement puja, Laxmi Puja, Ganesha
        puja and Durga Puja, Mata ki Chouki and Jaagran, Maha Mritunjya Jaap Puja, Yagna Havans, Kalsarpa Puja, Shradh Puja,
        Last Right Rituals
         </string>
    <string name="forgot_pswd">Don\'\'t have a account yet!! <u>Signup</u></string>
    <string name="choose_file">choose file</string>
    <string name="contact_details">  Reach us at: 151 West East highway CA,NY
        <br> Email us at: kk9328843@gmail.com </br>
        <br> Call us at: 9109600518 </br> </string>
    <string name="puja_text">Puja is an act of displaying veneration to god through invocations and numerous rituals. a very important
                side of puja is to create a religious relationship with the spiritual being. pujas facilitate individuals
                to usher in positivism, improve confidence and attract wealth and prosperity.
                Pujas are performed for seeking divine grace and blessings of assorted gods and goddesses or to
                attain specific objectives. Varied pujas are conducted for varied functions like for getting peace,
                healthiness, gaining material abundance and religious prosperity. Pujas like shanti pujas and dosh
                nivaran pujas also are very helpful to block negativity. Pujas are powerful and effective observe in
                one’s religious journey on the way to enlightenment. pujas holds utmost significance and therefore
                 additionally to general pujas, special online puja are performed throughout numerous occasions and
                 events. Find Ur Panditji provides online puja booking services and also conducts pujas at devotees home.</string>
    <string name="bhoomi_puja_text">The month of shravan, kartik, margshirsh and paush of Hindu calendar are the most suitable time
        for the pujan of land. It is necessary to worship the land before construction work starts. Be careful while selecting the
        time for puja.Monday and Thursday proves to be the best day for puja. One should also avoid the adhik maas, the zero month,
        lunar month and sunset.The bhoomi pujan ceremony is conducted in strict conformance to vastu shastra. By performing this puja,
        one can appease the positive energies and natural elements surrounding the site.</string>
    <string name="gauri_puja_text">Goddess Gauri is invited home and worshipped for three days. Married women pray to her for marital
        bliss and the long life of their husbands. Unmarried girls worship her in order to get virtuous husbands. The Gauri puja begins
        on the third day after Ganesh Chaturthi. This day is known as the avahana (arrival) as it is on this day that the Goddess is
        brought into the home. Following our tradition, the married women in the house draw small footsteps of the Goddess using rangoli
        (coloured) powder, following which Gauri\'s murti (idol) is brought home. </string>
    <string name="annaprashan_puja_text">Annaprashan is a popular Hindu ritual which marks the beginning of solid food intake by newborn
        babies. Following this ritual, the other weaning foods are introduced to newborn baby\’s diet . While the rituals of the ceremony
        may differ according to the region, Annaprashan Celebrates baby\'s transition towards solids food. Annaprashan is conducted when
        a newborn baby is ready to consume solids diet. Annaprashan Ceremony can be performed after six months and before the first birthday.
        For boys, Annaprashan is performed during the even months, generally in the child\'s sixth, eighth or tenth month. Annaprashan is
        performed during the odd months for girls, usually the child\'s seventh, ninth or eleventh month. Annaprashan is ceremony is mainly
        conducted at home or at a temple.
        /n The aim of Annaprashan Sanskar is showing the sense of purity and it is performed for healthy growth and strength of the body. It
            teaches the importance of piousness of food. Scriptures say, if you eat pious food your mind will be pious. Food is not for the taste
            but for health and growth of the body as well as the mind. Gods and Goddesses are first invoked and offered the food before feeding the child.
    </string>
    <string name="dhanteras_puja_text">The festival of Dhanteras is celebrated two days prior of Diwali festival. People celebrate this
         festival with great enthusiasm, devotion and prosperity. This festival is celebrated in Maharashtra,
          Northern India and in Gujarat. This festival is dedicated to Lord Dhanvantari who is the doctor of all
           the Gods. The important ritual that is being performed on this day is the Lakshmi Puja done in the evening.
        There are no particular rituals followed on this day as the manner in which this festival is celebrated
        varies from region to region. On this day people purchase or do shopping of the gold or silver things.
         This day is considered to be very favorable for all the new purchases or investments done. On this day
          people lit the first lamps of the Diwali festival. Lanterns are being decorated and are sold in the market
           to indicate the arrival of the Diwali festival.
    </string>
    <string name="mahamrityunjaya_puja_text">
        Maha Mrityunjaya Mantra: || Om Tryambakam Yajamahe
                            \n Sugandhim Pushtivardhanam || Urvarukamiva Bandhanan
                            \n    Mrityor Mukshiya Maamritat
        The great mantra dedicated to Shiva as Mrityunjaya is found in the Rig Veda. It is called the Maha Mrityunjaya mantra, the Great Death-Conquering
        mantra. It is a mantra that has many names and forms. It is called the Rudra mantra, referring to the furious aspect of Shiva; the Tryambakam
        mantra, alluding to Shiva\'s three eyes; and its is sometimes known as the Mrita-Sanjivini mantra because it is a component of the "life-restoring"
        practice given to the primordial sage Shukra after he had completed an exhausting period of austerity. The Maha Mrityunjaya mantra is hailed by
        the sages as the heart of the Veda. Along with the Gayatri mantra it holds the highest place among the many mantras used for contemplation and
        meditation. Lord Shiva is referred to as tryambakam, the three-eyed one, because his third-eye has been "opened" by the powers of penance and
        meditation. The third eye is said to be located in the space between the eyebrows, and is "opened" when one experiences spiritual awakening.
        So, when we pray to Lord Shiva, we are in essence asking for his blessings and assistance in opening our third eye of spiritual knowledge.
    </string>
    <string name="rudrabhishek_puja_text">>Rudra Abhisheka is a ritual of worshipping Lord Shiva in the Rudra form. In this method, the Shiv linga is
        washed by the water, which continuously keeps pouring on it through a vessel along with the continuous chanting of Vedic mantra called the Rudra
        Sukhta. In all the Vedic scriptures the Rudra Abhishek puja is considered as the greatest spiritual puja. Abhisheka is a ritual in the, which you
        worship of God with substances like milk (cow milk), Ghee, Curd, honey, coconut water, rice, water, sugarcane juice, powdered sugar and several more
        similar items as advised by pandits. These spiritual items used in the puja are generally those items, which are liked by the Lord Shiva.
    </string>
    <string name="kaal_sarp_puja_text">Kalsarp Dosha Nivaran is formed when all the planets are situated between Rahu and Ketu. When all
        the planets are hemmed between Rahu and Ketu i.e., the moon\'s north node and the moon\'s south node
         Kal Sarp Yoga is formed. At times a few planets are outside the circumference or reach of rahu and ketu.
         This yog brings negative thoughts in our mind and also creates fear in our mind. A yantra is made by man and
          it has to be energized through mantras from the Vedas so that it helps the person connect with the higher power.
          This process of energizing the yantra is undertaken by priests. The process of placing this energized yantra in homes
           is also important and must be followed in a right manner. There are 12 Types of Kalsarp Pooja. </string>
</resources>