<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_menu_gallery"-->
<!--            android:title="@string/menu_pandits" />-->
        <item
            android:id="@+id/nav_pandits"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_pandits" />

<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_pujas" />-->
        <item
            android:id="@+id/nav_pujas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_pujas" />

<!--        <item-->
<!--            android:id="@+id/nav_tools"-->
<!--            android:icon="@drawable/ic_menu_manage"-->
<!--            android:title="@string/menu_gods" />-->
        <item
            android:id="@+id/nav_gods"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_gods" />
<!--    </group>-->

<!--    <item android:title="Communicate">-->
<!--        <menu>-->
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_contact_us" />

        <item
            android:id="@+id/nav_my_booking"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_bookings" />
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->
<!--        </menu>-->
<!--    </item>-->
    </group>
</menu>
